fix div overflow

--- a/src/ground/ui/src/components/Controls/Controls.css
+++ b/src/ground/ui/src/components/Controls/Controls.css
@@ -55,7 +55,7 @@
 }
 
 .Controls .right-side {
-  height: 100%;
+  height: calc(100% - 50px);
   width: 100%;
   position: absolute;
   display: flex;
